--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-sondos/caps#readme",
   "dependencies": {
+    "eslint": "^7.10.0",
     "faker": "^5.1.0",
     "jest": "^26.4.2"
   }
