--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "eslint": "^7.10.0",
     "faker": "^5.1.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "socket.io-client": "^2.3.0"
   }
 }
